--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {},
   "dependencies": {
     "art-template": "^4.13.1",
-    "qiao.plugin.mysql": "0.0.3"
+    "qiao.plugin.mysql": "0.0.3",
+    "qiao.util.file": "0.0.2"
   },
   "author": {
     "name": "qiaowenbin",
