--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "keywords": [],
   "main": "index.js",
   "scripts": {},
+  "bin": {
+    "qiao-plugin-coder": "./bin/qiao-plugin-coder"
+  },
   "dependencies": {
     "art-template": "^4.13.1",
     "qiao.plugin.mysql": "0.0.3",
