--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "art-template": "^4.13.2",
-    "qiao.plugin.cli": "0.0.7",
-    "qiao.util.file": "^0.1.0"
+    "qiao.util.all": "^0.2.4"
   },
   "author": {
     "name": "qiaowenbin",
